feat: bug corrections and small missing features